# codecrafters-kafka-rust

./: .gitignore  Cargo.toml  README.md  README_ori.md
examples/: demo-derive.rs  demo-uuid.rs  demo-varints.rs  demo.rs
kafka-serde-derive/: Cargo.toml
kafka-serde-derive/src/: lib.rs
src/: api_versions.rs  common_struct.rs  connection.rs  decode.rs  describe_topic_partitions.rs  encode.rs  fetch.rs  lib.rs  main.rs  message.rs  metadata_log.rs  request_message.rs  response_message.rs  serilalize.rs  utils.rs
