[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                      # error handling
bincode = "1.3.3"
bytes = "1.3.0"                                        # helps manage buffers
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0.38"                                   # error handling
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
