[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
# anyhow = "1.0.98"                                                         # error handling
bincode = { version = "2.0.1", features = ["serde", "std"] }
bytes = "1.10.1"                                                          # helps manage buffers
lazy_static = "1.5.0"
paste = "1.0.15"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"                                                      # error handling
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
kafka-serde-derive = { path = "./kafka-serde-derive", version = "0.1.0" }
uuid = { version = "1.17.0", features = ["v4"] }
bitflags = "2.9.1"
